style/contacts.css
/* ... */
.slide-in {
    animation: slideIn 0.5s ease;
}

.slide-out {
    animation: slideOut 0.5s ease;
}

@keyframes slideIn {
    0% {
        transform: translateX(400%);
    }

    100% {
        transform: translateX(0);
    }
}

.colorOnHover:hover path {
    fill: #29ABE2 !important;
}


/* scroll-bar */

.contacts-container::-webkit-scrollbar-button:start:decrement {
    background-position: center !important;
    background-image: url('../img/arrow_drop_up.svg') !important;
    border-top-right-radius: 100% !important;
    border-top-left-radius: 100% !important;
}

.contacts-container::-webkit-scrollbar-button:end:increment {
    background-position: center !important;
    background-image: url('../img/arrow_drop_downaa.svg') !important;
    border-bottom-right-radius: 100% !important;
    border-bottom-left-radius: 100% !important;
}


/* width */

.contacts-container::-webkit-scrollbar {
    display: block !important;
    width: 8px !important;
    padding: 20px 0 !important;
    /* 20px oben und unten, 0px links und rechts */
}


/* background */

.contacts-container::-webkit-scrollbar-track {
    background-color: transparent !important;
}


/* color */

.contacts-container::-webkit-scrollbar-thumb {
    background-color: #909090 !important;
    border-radius: 10px;
}


/* added from summary.html */

.content {
    display: none !important;
    z-index: 0 !important;
}

.d-none {
    display: none;
}

@media (max-width: 700px) {
    .mobileDelete {
        display: none !important;
    }

    .scrollingContainer {
        margin-top: 0 !important;
    }

    .contactPage {
        width: 100% !important;
    }

    .contentContact {
        display: flex;
        flex-direction: row !important;
        padding-left: 0px !important;
        width: 100vw !important;
    }

    .contacts-container {
        width: 100% !important;
    }

    .firstLetterOverContact {
        width: 100% !important;
    }

    #contactsId {
        width: 100vw !important;
        padding-left: 38px !important;
        padding-right: 38px !important;
    }

    .addContactPopup {
        display: flex !important;
        flex-direction: column !important;
        align-items: center;
        height: calc(100vh - 20px) !important;
        width: calc(100vw - 32px) !important;
    }

    .leftSideAddContactPopup {
        border-top-right-radius: 30px !important;
        border-bottom-left-radius: 0 !important;
        height: calc(100vh * 0.4) !important;
        width: calc(100vw - 32px) !important;
        padding: 66px 24px !important;
    }

    .rightSidePopup {
        flex-direction: column;
        align-items: center !important;
        justify-content: center !important;
        width: 100% !important;
        height: calc(100vh * 0.6) !important;
    }

    .profilePictureArea {
        position: absolute !important;
    }

    .textUnderAddContactTitle {
        margin-bottom: 13.5px !important;
    }

    .circle {
        margin-top: -60px !important;
    }

    .personInCircle {
        top: 0px;
    }

    .contactInfo {
        width: 100%;
        height: auto !important;
        margin: 0 !important;
        align-items: center !important;
        width: 90% !important;
        gap: 15px !important;
    }

    .addContactButtonContainer {
        z-index: 0 !important;
        justify-content: center;
    }

    .cancelBtn {
        margin-right: 20px !important;
    }

    .inputName input,
    .inputEmail input,
    .inputPhone input {
        width: calc(100vw - 64px) !important;
        height: calc(26px + 15px) !important;
    }

    .closePopupCross path {
        fill: white !important;
    }

    .closePopupCross {
        position: absolute;
        top: calc(0px - (100vh * 0.4) + 24px) !important;
        right: 32px !important;
    }

    .mobileAddContact {
        position: absolute;
        bottom: calc(80px + 32px);
        right: 16px;
        background-color: #2A3647;
        width: 56px;
        height: 56px;
        border-radius: 100%;
        box-shadow: -2px 0 6px 0 rgb(0, 0, 0, 0.2);
    }

    .mobileAddContact img {
        width: 32px;
        height: 32px;
    }

    .mobileAddContact:hover {
        background-color: #29ABE2;
    }

    .contacts-container {
        /* margin-bottom: calc(80px + 90px) !important; */
    }

    .mobileContactOverview {
        position: absolute;
        top: 80px;
        bottom: 80px;
        left: 0;
        background-color: white;
        width: 100vw;
        height: 100vh;
    }

    .contactsTitle {
        gap: 8px !important;
        height: auto !important;
        display: flex !important;
        flex-direction: column !important;
        margin: 48px 16px !important;
    }

    .contactsTitle img {
        margin: 0 !important;
    }

    .fontSize61 {
        font-size: 47px !important;
    }

    .fontSize27 {
        font-size: 20px !important;
    }

    .fontSize47 {
        font-size: 36px !important;
    }

    #blueLineId {
        margin-top: 8px;
        font-size: 0 !important;
    }

    .contactInfoBig {
        margin: 0 16px;
        width: calc(100vw - 32px) !important;
    }

    .profilePictureBig {
        width: 80px !important;
        height: 80px !important;
        margin-right: 20px !important;
    }

    .contactInfoTextBlock {
        height: auto !important;
    }
}

